--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Arshad Khan",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "path": "^0.12.7"
   }
 }
