--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.14.0",
     "mongodb": "^2.2.11",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "serve-favicon": "^2.3.0"
   }
 }
