--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Arshad Khan",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "mongodb": "^2.2.11",
     "path": "^0.12.7",
